# retail-data-intelligence

./: .gitignore  LICENSE  Project description.txt  README.md  main.py  pyproject.toml
notebooks/: 01-notebook.ipynb  01_data_overview.ipynb  02_retail_dynamics.ipynb  03_inflation_consumption_link.ipynb  04_confidence_as_leading_indicator.ipynb  05_global_financial_spillovers.ipynb  06_shocks_and_structural_breaks.ipynb  07_machine_learning_perspectives.ipynb
src/data/: eurostat_api.py
src/download/: ecb_financial.py  eurostat_macro.py  fred_financial.py  macro_etl.py
tests/: test_eurostat_api.py
